--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.295",
+    "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
     "react-toastify": "^11.0.5",
     "react-typing-effect": "^2.0.5",
-    "tailwindcss": "^4.1.6"
+    "tailwindcss": "^4.1.6",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
