--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-parallax-tilt": "^1.7.295",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
+    "react-scroll-to-top": "^3.1.0",
     "react-toastify": "^11.0.5",
     "react-typing-effect": "^2.0.5",
     "tailwindcss": "^4.1.6",
